<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_outline_list_24"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_selling"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_selling" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="@string/title_user_profile"/>

</menu>