<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dosu.sellu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.dosu.sellu.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/products_fragment" />

    <fragment
        android:id="@+id/navigation_selling"
        android:name="com.dosu.sellu.ui.selling.SellingFragment"
        android:label="@string/title_selling"
        tools:layout="@layout/selling_fragment" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.dosu.sellu.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment"/>

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.dosu.sellu.ui.user_profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/user_profile_fragment"/>
</navigation>