<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/background"
    tools:context=".ui.products.add_product.AddProductActivity">

    <LinearLayout
        android:background="@drawable/tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image0"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:background="@drawable/ic_baseline_shopping_bag_24"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_shopping_bag_24"/>
            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_shopping_bag_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_shopping_bag_24"/>
            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_shopping_bag_24"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/image_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/camera"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/image_storage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/photos"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <EditText
        android:background="@drawable/tile"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:autofillHints="@string/product_name_example"
        android:inputType="text"
        android:hint="@string/product_name"/>

    <EditText
        android:background="@drawable/tile"
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:autofillHints="@string/product_description_example"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:gravity="top" />

    <EditText
        android:background="@drawable/tile"
        android:id="@+id/edit_prize"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/text_prize"
        android:autofillHints="@string/product_prize_example"
        android:inputType="number"/>

    <EditText
        android:background="@drawable/tile"
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:autofillHints="@string/product_quantity_example"
        android:hint="@string/product_quantity_long"
        android:inputType="numberDecimal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/add_product_complete"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/add_product"/>

</LinearLayout>