<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/tile"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/gradient_product_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/text_background"
                android:text="@string/product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:baselineAligned="false">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/text_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/text_prize"
                        android:gravity="center_vertical"
                        android:layout_marginStart="3dp"/>
                    <TextView
                        android:id="@+id/prize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/text_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="end|center_vertical"
                        android:layout_marginEnd="3dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/quantity_minus"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:text="@string/minus"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/quantity_plus"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:text="@string/plus"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/product_expand_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_expand_more_24"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>