<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/tile"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/product_image"
            android:src="@drawable/ic_baseline_shopping_bag_24"
            android:contentDescription="@string/product_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:baselineAligned="false">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_prize"
                        android:gravity="center_vertical"
                        android:layout_marginStart="3dp"/>
                    <TextView
                        android:id="@+id/prize"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center_vertical"
                        android:layout_marginEnd="3dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_quantity"
                        android:gravity="center_vertical"
                        android:layout_marginStart="3dp"/>
                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center_vertical"
                        android:layout_marginEnd="3dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/product_expand_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_expand_more_24"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>